--- a/src/app/error/notfound/notfound.component.html
+++ b/src/app/error/notfound/notfound.component.html
@@ -1,1 +1,5 @@
-<p>notfound works!</p>
+<div class="mx-auto w-75 d-flex flex-column align-items-center h-100 justify-content-center">
+  <h1>404.</h1>
+  <h2>Pas non trouvée</h2>
+</div>
+
