--- a/src/app/home/search/search.component.html
+++ b/src/app/home/search/search.component.html
@@ -3,5 +3,6 @@
     Bonjour,
   </h1>
   <input type="text" placeholder="Rechercher" class="form-control" (keyup.enter)="submit()" [formControl]="textSearch"/>
-  <app-date class="d-flex flex-column align-items-end"></app-date>
+  <app-date class="d-flex flex-column align-items-end pt-2"></app-date>
+  <app-navigation-home></app-navigation-home>
 </div>
