Add Unsplash API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,7 @@
 <main class="flex-grow-1">
   <router-outlet></router-outlet>
 </main>
-<footer>
+<footer class="d-flex pb-2 justify-content-between text-light">
+  <div>Image from <a href="{{ unsplashUrl }}" target="_blank">Unsplash</a></div>
+  <div>&lt;/&gt; with &lt;3 & Angular</div>
 </footer>
